<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>manoj.gatling.sample</groupId>
	<artifactId>gatling-sample-perf-tests</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<properties>
		<gatling.version>2.2.0</gatling.version>
		<gatling-plugin.version>2.2.0</gatling-plugin.version>
		<gatling.skip>false</gatling.skip>

		<gatling.local.home>${project.basedir}/gatling/gatling-charts-highcharts-bundle-${gatling.version}/bin/gatling.sh</gatling.local.home>
		<gatling.install.script>${project.basedir}/src/test/resources/install-gatling.sh</gatling.install.script>
		<gatling.root>gatling-charts-highcharts-bundle-${gatling.version}</gatling.root>
		<gatling.java.opts> -Xms1g -Xmx25g -Xss8M
			-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M</gatling.java.opts>

		<!-- Fully qualified name of the Gatling simulation and a name describing 
			the test -->
		<gatling.simulation>manoj.gatling.sample.SampleSim</gatling.simulation>
		<gatling.test.name>GatlingSimSample</gatling.test.name>

	</properties>

	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>2.11.8</version>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-reflect</artifactId>
			<version>2.11.8</version>
		</dependency>
		<dependency>
			<groupId>io.gatling.highcharts</groupId>
			<artifactId>gatling-charts-highcharts</artifactId>
			<version>${gatling.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.gatling</groupId>
			<artifactId>gatling-core</artifactId>
			<version>${gatling.version}</version>
		</dependency>
		<dependency>
			<groupId>io.gatling</groupId>
			<artifactId>gatling-compiler</artifactId>
			<version>${gatling.version}</version>
		</dependency>
		<dependency>
			<groupId>io.gatling</groupId>
			<artifactId>gatling-app</artifactId>
			<version>${gatling.version}</version>
		</dependency>
		<dependency>
			<groupId>io.gatling</groupId>
			<artifactId>gatling-metrics</artifactId>
			<version>${gatling.version}</version>
		</dependency>
		<dependency>
			<groupId>io.gatling</groupId>
			<artifactId>gatling-http</artifactId>
			<version>${gatling.version}</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/scala</sourceDirectory>
		<testSourceDirectory>src/test/scala</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Required for running smaller Gatling simulations locally for debugging 
				purposes -->
			<plugin>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-maven-plugin</artifactId>
				<version>${gatling-plugin.version}</version>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>execute</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<dataFolder>src/test/resources/data</dataFolder>
					<resultsFolder>target/gatling/results</resultsFolder>
					<simulationsFolder>src/test/scala</simulationsFolder>
					<simulationClass>${gatling.simulation}</simulationClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>